# ShutdownGuard

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_zh-CN.md
src/: global_shutdown_hook.cpp  main.cpp  ui.cpp  ui.h
